# runner-animation

./: .gitignore  CMakeLists.txt  install.sh  start.sh
include/: Sprite.h
src/: main.cpp
src/render/: ParallaxLayer.cpp  ParallaxLayer.h  Sprite.cpp  frag.glsl  vert.glsl
